# enob-explorer

./: .gitignore  README.md  embed_image.py  enob-explorer.ipynb  environment.yml  jupyter_lite_config.json  main.py  pyproject.toml
.github/workflows/: deploy.yml
