[project]
name = "enob-explorer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anywidget>=0.11.0",
    "ipython>=9.15.0",
    "ipywidgets>=8.1.8",
    "jupyterlite-core==0.7.0",
    "jupyterlite-pyodide-kernel==0.7.0",
    "notebook>=7.0,<7.6",
    "numpy>=2.4.6",
    "plotly>=5.0,<6",
    "scipy>=1.17.1",
    "traitlets>=5.15.1",
    "voici-core>=0.10.0",
]
